# pizza-delivery-api

./: README.md  pyproject.toml
pizza/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
pizza/orders/: admin.py  models.py  urls.py  views.py
pizza/pizza/: settings.py  urls.py
