[tool.poetry]
name = "pizza-delivery-api"
version = "0.1.0"
description = ""
authors = ["Ruben Jimenez Andreu <rubenjmnz93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
