[tool.poetry]
name = "pizza-delivery-api"
version = "0.1.0"
description = ""
authors = ["Ruben Jimenez Andreu <rubenjmnz93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
djoser = "^2.2.3"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
